--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "name": "jupyterlab_apod",
     "version": "0.1.0",
-    "description": " Show a random NASA Astronomy Picture of the Day in a JupyterLab panel
-",
+    "description": "Show a random NASA Astronomy Picture of the Day in a JupyterLab panel",
     "keywords": [
         "jupyter",
         "jupyterlab",
@@ -54,7 +53,9 @@
         "watch:labextension": "jupyter labextension watch ."
     },
     "dependencies": {
-        "@jupyterlab/application": "^4.0.0"
+        "@jupyterlab/application": "^4.2.1",
+        "@jupyterlab/apputils": "^4.3.1",
+        "@lumino/widgets": "^2.3.2"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
