--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "dependencies": {
         "@jupyterlab/application": "^4.2.1",
         "@jupyterlab/apputils": "^4.3.1",
-        "@lumino/widgets": "^2.3.2"
+        "@lumino/widgets": "^2.3.2",
+        "express": "^4.19.2",
+        "fs": "^0.0.1-security"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
