Added color scheme consistency

--- a/package.json
+++ b/package.json
@@ -112,12 +112,7 @@
         "ui-tests"
     ],
     "eslintConfig": {
-        "extends": [
-            "eslint:recommended",
-            "plugin:@typescript-eslint/eslint-recommended",
-            "plugin:@typescript-eslint/recommended",
-            "plugin:prettier/recommended"
-        ],
+        "extends": [],
         "parser": "@typescript-eslint/parser",
         "parserOptions": {
             "project": "tsconfig.json",
@@ -149,14 +144,6 @@
             "@typescript-eslint/no-explicit-any": "off",
             "@typescript-eslint/no-namespace": "off",
             "@typescript-eslint/no-use-before-define": "off",
-            "@typescript-eslint/quotes": [
-                "error",
-                "single",
-                {
-                    "avoidEscape": true,
-                    "allowTemplateLiterals": false
-                }
-            ],
             "curly": [
                 "error",
                 "all"
