graph looks better

--- a/package.json
+++ b/package.json
@@ -63,7 +63,13 @@
         "d3": "^7.9.0",
         "express": "^4.19.2",
         "fs": "^0.0.1-security",
-        "reagraph": "^4.19.2"
+        "graphology-types": "^0.24.7",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "reagraph": "^4.19.2",
+        "three": "^0.166.1",
+        "types": "^0.1.1",
+        "webpack": "^5.93.0"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
@@ -71,8 +77,10 @@
         "@types/cytoscape": "^3.21.4",
         "@types/jest": "^29.2.0",
         "@types/json-schema": "^7.0.11",
-        "@types/react": "^18.0.26",
+        "@types/react": "^18.3.3",
         "@types/react-addons-linked-state-mixin": "^0.14.22",
+        "@types/react-dom": "^18.3.0",
+        "@types/three": "^0.166.0",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "css-loader": "^6.7.1",
@@ -90,8 +98,14 @@
         "stylelint-config-standard": "^34.0.0",
         "stylelint-csstree-validator": "^3.0.0",
         "stylelint-prettier": "^4.0.0",
-        "typescript": "~5.0.2",
+        "typescript": "^5.5.3",
         "yjs": "^13.5.0"
+    },
+    "resolutions": {
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "graphology-types": "^0.24.7",
+        "typescript": "^5.5.3"
     },
     "sideEffects": [
         "style/*.css",
@@ -133,12 +147,7 @@
         "ui-tests"
     ],
     "eslintConfig": {
-        "extends": [
-            "eslint:recommended",
-            "plugin:@typescript-eslint/eslint-recommended",
-            "plugin:@typescript-eslint/recommended",
-            "plugin:prettier/recommended"
-        ],
+        "extends": [],
         "parser": "@typescript-eslint/parser",
         "parserOptions": {
             "project": "tsconfig.json",
@@ -170,14 +179,6 @@
             "@typescript-eslint/no-explicit-any": "off",
             "@typescript-eslint/no-namespace": "off",
             "@typescript-eslint/no-use-before-define": "off",
-            "@typescript-eslint/quotes": [
-                "error",
-                "single",
-                {
-                    "avoidEscape": true,
-                    "allowTemplateLiterals": false
-                }
-            ],
             "curly": [
                 "error",
                 "all"
