--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
         "watch:labextension": "jupyter labextension watch ."
     },
     "dependencies": {
+        "@codemirror/lang-python": "^6.1.6",
         "@jupyterlab/application": "^4.2.1",
         "@jupyterlab/apputils": "^4.3.1",
         "@jupyterlab/launcher": "^4.2.3",
         "@jupyterlab/launcher\n": "^4.2.3",
         "@lumino/widgets": "^2.3.2",
         "@types/d3": "^7.4.3",
+        "codemirror": "^6.0.1",
         "cytoscape": "^3.30.0",
         "d3": "^7.9.0",
         "express": "^4.19.2",
