--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ backend/api_key.txt
 jupyterlab_apod/labextension
 # Version file is handled by hatchling
 jupyterlab_apod/_version.py
-
+/secrets
 # Integration tests
 ui-tests/test-results/
 ui-tests/playwright-report/
