--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -6,12 +6,12 @@ author_name: My Name
 has_binder: true
 has_settings: false
 kind: frontend
-labextension_name: jupyterlab_apod
+labextension_name: cluster_viz
 project_short_description: ' Show a random NASA Astronomy Picture of the Day in a
     JupyterLab panel
 
     '
-python_name: jupyterlab_apod
+python_name: cluster_viz
 repository: ''
 test: true
 
