--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         python -m pip install .[test]
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "jupyterlab_apod.*OK"
+        jupyter labextension list 2>&1 | grep -ie "cluster_viz.*OK"
         python -m jupyterlab.browser_check
 
     - name: Package the extension
@@ -50,13 +50,13 @@ jobs:
 
         pip install build
         python -m build
-        pip uninstall -y "jupyterlab_apod" jupyterlab
+        pip uninstall -y "cluster_viz" jupyterlab
 
     - name: Upload extension packages
       uses: actions/upload-artifact@v4
       with:
         name: extension-artifacts
-        path: dist/jupyterlab_apod*
+        path: dist/cluster_viz*
         if-no-files-found: error
 
   test_isolated:
@@ -79,11 +79,11 @@ jobs:
         sudo rm -rf $(which node)
         sudo rm -rf $(which node)
 
-        pip install "jupyterlab>=4.0.0,<5" jupyterlab_apod*.whl
+        pip install "jupyterlab>=4.0.0,<5" cluster_viz*.whl
 
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "jupyterlab_apod.*OK"
+        jupyter labextension list 2>&1 | grep -ie "cluster_viz.*OK"
         python -m jupyterlab.browser_check --no-browser-test
 
   integration-tests:
@@ -109,7 +109,7 @@ jobs:
     - name: Install the extension
       run: |
         set -eux
-        python -m pip install "jupyterlab>=4.0.0,<5" jupyterlab_apod*.whl
+        python -m pip install "jupyterlab>=4.0.0,<5" cluster_viz*.whl
 
     - name: Install dependencies
       working-directory: ui-tests
@@ -138,7 +138,7 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: jupyterlab_apod-playwright-tests
+        name: cluster_viz-playwright-tests
         path: |
           ui-tests/test-results
           ui-tests/playwright-report
