--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "cluster_viz",
     "version": "0.2.4",
     "description": "Show a random NASA Astronomy Picture of the Day in a JupyterLab panel",
+    "workspaces": [
+        "ui-tests"
+    ],
     "keywords": [
         "jupyter",
         "jupyterlab",
